package bonus.decor;

import java.awt.image.BufferedImage;

public class Decor {
	
	public BufferedImage image;
	public boolean collision = false;

}
