@startuml
class decor.Decor {
+ BufferedImage image
+ boolean collision
}
class object.Joueur {
~ Jeu nouveaujeu
~ Keyinput entrerClavier
+ int screenX
+ int screenY
+ void positionetvitessededepart()
+ void imageUpload()
+ void update()
+ void draw(Graphics2D)
}
class object.Monster {
~ Jeu nouveaujeu
+ int screenX
+ int screenY
+ void positionetvitessededepart()
+ void imageUpload()
+ void update()
+ void draw(Graphics2D)
}
class game.Jeu {
~ int tailleDeBase
~ int echelle
+ int tailleCarreaux
+ int colonneEcran
+ int ligneEcran
+ int largeurEcran
+ int hauteurEcran
+ int maxWorldColonne
+ int maxWorldLigne
+ int hauteurWorld
+ int largeurWorld
~ int FPS
~ GestionDecor gestionD
~ Keyinput entrerClavier
~ Thread gameThread
+ VerifierCollision Verifier
+ Setter set
+ Joueur joueur
+ SuperBonus[] obj
+ Monster monstre
+ Monster monstre2
+ Monster monstre3
+ Monster monstre4
+ void setUpGame()
+ void startGameThread()
+ void run()
+ void update()
+ void paintComponent(Graphics)
}
class bonus.SuperBonus {
+ BufferedImage image
+ String name
+ boolean collision
+ int worldX
+ void draw(Graphics2D,Jeu)
}
class game.Keyinput {
+ boolean toucheZ
+ void keyTyped(KeyEvent)
+ void keyPressed(KeyEvent)
+ void keyReleased(KeyEvent)
}
class game.VerifierCollision {
~ Jeu nouveaujeu
+ void VerifierDecor(Parentsobject)
}
class bonus.ObjFlower {
}
class decor.GestionDecor {
~ Jeu nouveaujeu
+ Decor[] decor
+ int[][] mapNbCarreaux
+ void getDecorImage()
+ void loadMap()
+ void draw(Graphics2D)
}
class bonus.ObjStar {
}
class object.Parentsobject {
+ int worldX
+ int speed
+ BufferedImage up1
+ String direction
+ int spriteCounter
+ int spriteNum
+ Rectangle solidArea
+ boolean CollisionOn
}
class game.Main {
+ {static} void main(String[])
}
class bonus.ObjEclair {
}
class bonus.ObjDrapeau {
}
class game.Setter {
~ Jeu nouveaujeu
+ void setObjects()
}


object.Parentsobject <|-- object.Joueur
object.Parentsobject <|-- object.Monster
game.Runnable <|.. game.Jeu
javax.swing.JPanel <|-- game.Jeu
java.awt.event.KeyListener <|.. game.Keyinput
bonus.SuperBonus <|-- bonus.ObjFlower
bonus.SuperBonus <|-- bonus.ObjStar
bonus.SuperBonus <|-- bonus.ObjEclair
bonus.SuperBonus <|-- bonus.ObjDrapeau
game.Setter -- bonus.ObjFlower
game.Setter -- bonus.ObjStar
game.Setter -- bonus.ObjEclair
game.Setter -- bonus.ObjDrapeau
game.VerifierCollision -- object.Parentsobject
@enduml